tests/structs/nonexistent_field.esl
// error: No such field 'mum' in struct 'Foo'
struct Foo {
    your: u32;
}

func main() {
    let foo: Foo = Foo { your: 11 };
    print("{}", foo.mum);
}
